base/iati-data-validator-loop-testfiles.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: iati-data-validator-loop-testfiles
  labels:
    app: iati-data-validator-loop-testfiles
spec:
  template:
    metadata:
      labels:
        app: iati-data-validator-loop-testfiles
        tier: backend
    spec:
      nodeSelector:
        node: preemptible
      containers:
      - name: iati-data-validator-loop-testfiles
        image: gcr.io/dataworkbench-io/iati-data-validator:0.11.5
        command: ["/home/loop-unprocessed-testfiles"]
        imagePullPolicy: Always
        resources:
          requests:
            memory: "1Gi"
          limits:
            memory: "2Gi"
            cpu: 300m
        volumeMounts:
        - mountPath: /workspace
          name: workspace
      volumes:
      - name: workspace
        emptyDir: {}
