base/iati-data-validator-loop.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: iati-data-validator-loop
  labels:
    app: iati-data-validator-loop
spec:
  template:
    metadata:
      labels:
        app: iati-data-validator-loop
        tier: backend
    spec:
      nodeSelector:
        batch: enabled
      containers:
      - name: iati-data-validator-loop
        image: gcr.io/dataworkbench-io/iati-data-validator:0.9.20
        imagePullPolicy: Always
        resources:
          requests:
            memory: "1Gi"
          limits:
            memory: "3Gi"
        volumeMounts:
        - mountPath: /workspace
          name: workspace
      volumes:
      - name: workspace
        emptyDir: {}
