base/homepage.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  labels:
    app: homepage
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: front-end
  selector:
    app: homepage
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  labels:
    app: homepage
spec:
  # override in deploy/scaling.yaml
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
        tier: frontend
    spec:
      containers:
      - name: homepage
        image: gcr.io/d4d-dataworkbench/homepage:0.3.6
        imagePullPolicy: Always
        ports:
        - name: front-end
          containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
