base/iati-data-validator-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: iati-data-validator-webhook
  labels:
    app: iati-data-validator-webhook
    tier: backend
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"dwb-backendconfig-longtimeout"}}'
spec:
  type: NodePort
  ports:
  - name: svc-webhook
    port: 80
    targetPort: webhook-server
  selector:
    app: iati-data-validator-webhook
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iati-data-validator-webhook
  labels:
    app: iati-data-validator-webhook
spec:
  selector:
    matchLabels:
      app: iati-data-validator-webhook
  template:
    metadata:
      labels:
        app: iati-data-validator-webhook
        tier: backend
    spec:
      containers:
      - name: iati-data-validator-webhook
        image: gcr.io/d4d-dataworkbench/iati-data-validator:0.11.5
        command: ["/home/webhook"]
        args: ["-urlprefix=process", "-hooks=/home/webhook-scripts/hooks.json", "-hotreload", "-verbose"]
        imagePullPolicy: Always
        ports:
        - name: webhook-server
          containerPort: 9000
        resources:
          requests:
            memory: "1Gi"
          limits:
            memory: "3Gi"
            cpu: 300m
        readinessProbe:
          httpGet:
            path: /process/get-feedback
            port: 9000
        volumeMounts:
        - mountPath: /workspace
          name: workspace
      volumes:
      - name: workspace
        emptyDir: {}
