base/validator-api-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: validator-api-public
  labels:
    app: validator-api-public
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: api-public
  selector:
    app: validator-api-public
    tier: frontend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: validator-api-public
  labels:
    app: validator-api-public
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: validator-api-public
        tier: frontend
    spec:
      containers:
      - name: validator-api-public-app
        image: gcr.io/dataworkbench-io/validator-api:0.5.7-public
        imagePullPolicy: Always
        ports:
        - name: api-public
          containerPort: 8080
