base/validator-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: validator-api
  labels:
    app: validator-api
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: api-server
  selector:
    app: validator-api
    tier: frontend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: validator-api
  labels:
    app: validator-api
spec:
  # override in deploy/scaling.yaml
  replicas: 1
  template:
    metadata:
      labels:
        app: validator-api
        tier: frontend
    spec:
      nodeSelector:
        node: core
      containers:
      - name: validator-api-app
        image: gcr.io/d4d-dataworkbench/validator-api:1.0.0
        imagePullPolicy: Always
        ports:
        - name: api-server
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: validator-api-public
  labels:
    app: validator-api-public
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: api-public
  selector:
    app: validator-api-public
    tier: frontend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: validator-api-public
  labels:
    app: validator-api-public
spec:
  # override in deploy/scaling.yaml
  replicas: 1
  template:
    metadata:
      labels:
        app: validator-api-public
        tier: frontend
    spec:
      containers:
      - name: validator-api-public-app
        image: gcr.io/d4d-dataworkbench/validator-api:1.0.0
        imagePullPolicy: Always
        ports:
        - name: api-public
          containerPort: 8080
