base/validator-front-end.yaml
apiVersion: v1
kind: Service
metadata:
  name: validator-front-end
  labels:
    app: validator-front-end
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: front-end
  selector:
    app: validator-front-end
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validator-front-end
  labels:
    app: validator-front-end
spec:
  # override in deploy/scaling.yaml
  replicas: 1
  selector:
    matchLabels:
      app: validator-front-end
  template:
    metadata:
      labels:
        app: validator-front-end
        tier: frontend
    spec:
      containers:
      - name: validator-front-end
        image: gcr.io/d4d-dataworkbench/validator-front-end:0.8.7
        imagePullPolicy: Always
        ports:
        - name: front-end
          containerPort: 80
        resources:
          requests:
            memory: "512Mi"
            cpu: "50m"
          limits:
            memory: "1Gi"
            cpu: "100m"
        volumeMounts:
        - name: frontend-env-js-volume
          mountPath: /usr/share/nginx/html/iati-feedback/env.js
          subPath: env.js
      volumes:
      - name: frontend-env-js-volume
        configMap:
          name: frontend-env-js
