base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dataworkbench-ingress
spec:
  backend:
    serviceName: homepage
    servicePort: 80
  rules:
    - http:
        paths:
          # GKE ingress uses url-maps that require wildcards
          # and also a separate (duplicate) rule for URLs to a directory
          # but not ending with a '/'
        - path: /iati-feedback
          backend:
            serviceName: validator-front-end
            servicePort: 80
        - path: /iati-feedback/*
          backend:
            serviceName: validator-front-end
            servicePort: 80
        - path: /api
          backend:
            serviceName: validator-api-public
            servicePort: 80
        - path: /api/*
          backend:
            serviceName: validator-api-public
            servicePort: 80
        - path: /explorer
          backend:
            serviceName: validator-api-public
            servicePort: 80
        - path: /explorer/*
          backend:
            serviceName: validator-api-public
            servicePort: 80
        - path: /process
          backend:
            serviceName: iati-data-validator-webhook
            servicePort: 80
        - path: /process/*
          backend:
            serviceName: iati-data-validator-webhook
            servicePort: 80
